# Embedded_IoT

./: .gitignore  README.md  accel_8h.html  accel_8h.js  accel_8h_source.html  adc_8c.html  adc_8c.js  adc_8h.html  adc_8h.js  adc_8h_source.html  annotated.html  annotated_dup.js  board__led_8c.html  board__led_8c.js  board__led_8h.html  board__led_8h.js  board__led_8h_source.html  brightness__thread_8c.html  brightness__thread_8c.js  brightness__thread_8h.html  brightness__thread_8h.js  brightness__thread_8h_source.html  classes.html  color_8c.html  color_8c.js  color_8h.html  color_8h.js  color_8h_source.html  dir_067e93ac8fddbef571f900e9ce5f9438.html  dir_067e93ac8fddbef571f900e9ce5f9438.js  dir_1b2b3025760fa230ec416a443f96fa32.html  dir_1b2b3025760fa230ec416a443f96fa32.js  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_4fa7eb7783f6e098f5b0220d6b846cac.html  dir_4fa7eb7783f6e098f5b0220d6b846cac.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6eb801e110cfe0ba905b422ee1482b53.html  dir_6eb801e110cfe0ba905b422ee1482b53.js  dir_7349e89ef19c117195f8e371603e1b1f.html  (+67 more)
brightness_control/: CMakeLists.txt  Doxyfile  README.md  main.md
brightness_control/boards/: nucleo_wl55jc.overlay
brightness_control/doxygen/: main.md
brightness_control/doxygen/doxygen-custom/: header.html
brightness_control/src/: brightness_thread.c  brightness_thread.h  main.c  main.h
brightness_control/src/sensors/adc/: adc.c  adc.h
brightness_control/src/sensors/phototransistor/: phototransistor.c  phototransistor.h
brightness_control/src/sensors/rgb_led/: rgb_led.c  rgb_led.h
brightness_control/src/sensors/user_button/: user_button.c  user_button.h
plant_monitoring_system/: CMakeLists.txt  main.md
plant_monitoring_system/boards/: nucleo_wl55jc.overlay
plant_monitoring_system/confs/: prj_nucleo_wl55jc.conf
plant_monitoring_system/src/: gps_thread.c  gps_thread.h  main.c  main.h  sensors_thread.c  sensors_thread.h
plant_monitoring_system/src/sensors/adc/: adc.c  adc.h
plant_monitoring_system/src/sensors/gps/: gps.c  gps.h
plant_monitoring_system/src/sensors/i2c/: accel.c  accel.h  color.c  color.h  i2c.c  i2c.h  temp_hum.c  (+1 more)
(+96 files in other folders)
